--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,5 @@ applications:
 - name: Onlinelabs
   health-check-type: process
   stack: windows
-  command: cmd /c .\ConsoleServiceTest\bin\Debug\LabService.exe --server.urls=http://0.0.0.0:%PORT%
+  command:  .\ConsoleServiceTest\bin\Debug\LabService.exe 
   
